--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,3 +42,14 @@ input:focus {
   outline: none;
   border-color: var(--color-primary);
 }
+
+/* Remove spinner arrows from number inputs */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
