--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,11 @@ html, body {
   line-height: 1.6;
 }
 
+/* Account for fixed header height */
+main, .college-page-main, .summary-page-main, .receipt-page-main {
+  padding-top: 72px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
